chore: authentication flow
